Adding readme file

--- a/Gaming1.html
+++ b/Gaming1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="icon" href="profile.png" />
     <!--linking external CSS file to html -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="videoplayer.css" />
@@ -43,9 +44,8 @@
         </div>
         <div id="description"></div>
       </div>
-      
-      <div id="suggested-videos">
 
+      <div id="suggested-videos">
         <a class="video" href="home2.html">
           <img src="home2.jpg" alt="" />
         </a>
@@ -79,7 +79,8 @@
           <img src="Gaming3.jpg" alt="" />
         </a>
         <a class="title" href="Gaming3.html">
-          RDR 2 Unveiled: Explore the Wild West in the Epic Red Dead Redemption 2 Trailer!
+          RDR 2 Unveiled: Explore the Wild West in the Epic Red Dead Redemption
+          2 Trailer!
         </a>
 
         <a class="video" href="music1.html">
@@ -93,7 +94,9 @@
           <img src="music2.jpg" alt="" />
         </a>
         <a class="title" href="music2.html">
-          Otnicka - Peaky Blinder (lyrics) | i am not outsider i'm a peaky blinder </a>
+          Otnicka - Peaky Blinder (lyrics) | i am not outsider i'm a peaky
+          blinder
+        </a>
 
         <a class="video" href="music3.html">
           <img src="music3.jpg" alt="" />
@@ -113,37 +116,40 @@
           <img src="sports2.jpg" alt="" />
         </a>
         <a class="title" href="sports2.html">
-          Magical Messi: Stunning Goal Highlights that Define Greatness 
+          Magical Messi: Stunning Goal Highlights that Define Greatness
         </a>
 
         <a class="video" href="sports3.html">
           <img src="sports3.jpg" alt="" />
         </a>
-        <a class="title" href="sports3.html"> 
-          Germany Secures Semi-Final Spot with Victory Over New Zealand in Intense Hockey Clash!
+        <a class="title" href="sports3.html">
+          Germany Secures Semi-Final Spot with Victory Over New Zealand in
+          Intense Hockey Clash!
         </a>
 
         <a class="video" href="news1.html">
           <img src="news1.jpg" alt="" />
         </a>
         <a class="title" href="news1.html">
-          Gansu earthquake: More than 120 killed in China's deadliest quake in years | BBC News
+          Gansu earthquake: More than 120 killed in China's deadliest quake in
+          years | BBC News
         </a>
 
-        <a class="video"  href="news2.html">
+        <a class="video" href="news2.html">
           <img src="news2.jpg" alt="" />
         </a>
-        <a class="title"  href="news2.html">
-          Gaza in 2 Minutes: Unraveling the Rich History and Complex Dynamics of a Region.
+        <a class="title" href="news2.html">
+          Gaza in 2 Minutes: Unraveling the Rich History and Complex Dynamics of
+          a Region.
         </a>
 
-        <a class="video"  href="news3.html">
+        <a class="video" href="news3.html">
           <img src="news3.jpg" alt="" />
         </a>
-        <a class="title"  href="news3.html">
-          Pakistan-India Water Dispute: Unraveling Decades of Tension in a Brief Overview.
+        <a class="title" href="news3.html">
+          Pakistan-India Water Dispute: Unraveling Decades of Tension in a Brief
+          Overview.
         </a>
-
       </div>
     </div>
 
